upgrade to v3.8.2