@@ -1,45 +1,45 @@
-@echo off
+ï»¿@echo off
 
-rem jarÆ½¼¶Ä¿Â¼
+rem jarå¹³çº§ç›®å½•
 set AppName=ruoyi-admin.jar
 
-rem JVM²ÎÊı
-set JVM_OPTS="-Dname=%AppName%  -Duser.timezone=Asia/Shanghai -Xms512M -Xmx512M -XX:PermSize=256M -XX:MaxPermSize=512M -XX:+HeapDumpOnOutOfMemoryError -XX:+PrintGCDateStamps  -XX:+PrintGCDetails -XX:NewRatio=1 -XX:SurvivorRatio=30 -XX:+UseParallelGC -XX:+UseParallelOldGC"
+rem JVMå‚æ•°
+set JVM_OPTS="-Dname=%AppName%  -Duser.timezone=Asia/Shanghai -Xms512m -Xmx1024m -XX:MetaspaceSize=128m -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -XX:+PrintGCDateStamps  -XX:+PrintGCDetails -XX:NewRatio=1 -XX:SurvivorRatio=30 -XX:+UseParallelGC -XX:+UseParallelOldGC"
 
 
-ECHO. 
-	ECHO.  [1] Æô¶¯%AppName%
-	ECHO.  [2] ¹Ø±Õ%AppName%
-	ECHO.  [3] ÖØÆô%AppName%
-	ECHO.  [4] Æô¶¯×´Ì¬ %AppName%
-	ECHO.  [5] ÍË ³ö 
-ECHO. 
+ECHO.
+	ECHO.  [1] å¯åŠ¨%AppName%
+	ECHO.  [2] å…³é—­%AppName%
+	ECHO.  [3] é‡å¯%AppName%
+	ECHO.  [4] å¯åŠ¨çŠ¶æ€ %AppName%
+	ECHO.  [5] é€€ å‡º
+ECHO.
 
-ECHO.ÇëÊäÈëÑ¡ÔñÏîÄ¿µÄĞòºÅ:
+ECHO.è¯·è¾“å…¥é€‰æ‹©é¡¹ç›®çš„åºå·:
 set /p ID=
-	IF "%id%"=="1" GOTO start 
-	IF "%id%"=="2" GOTO stop 
-	IF "%id%"=="3" GOTO restart 
+	IF "%id%"=="1" GOTO start
+	IF "%id%"=="2" GOTO stop
+	IF "%id%"=="3" GOTO restart
 	IF "%id%"=="4" GOTO status
 	IF "%id%"=="5" EXIT
-PAUSE 
+PAUSE
 :start
     for /f "usebackq tokens=1-2" %%a in (`jps -l ^| findstr %AppName%`) do (
 		set pid=%%a
 		set image_name=%%b
 	)
 	if  defined pid (
-		echo %%is running 
-		PAUSE 
-	) 
+		echo %%is running
+		PAUSE
+	)
 
-start javaw -jar %JAVA_OPTS% ruoyi-admin.jar
+start javaw %JVM_OPTS% -jar %AppName%
 
-echo  starting¡­¡­
+echo  startingâ€¦â€¦
 echo  Start %AppName% success...
 goto:eof
 
-rem º¯ÊıstopÍ¨¹ıjpsÃüÁî²éÕÒpid²¢½áÊø½ø³Ì
+rem å‡½æ•°stopé€šè¿‡jpså‘½ä»¤æŸ¥æ‰¾pidå¹¶ç»“æŸè¿›ç¨‹
 :stop
 	for /f "usebackq tokens=1-2" %%a in (`jps -l ^| findstr %AppName%`) do (
 		set pid=%%a
@@ -48,7 +48,7 @@ rem º¯ÊıstopÍ¨¹ıjpsÃüÁî²éÕÒpid²¢½áÊø½ø³Ì
 	if not defined pid (echo process %AppName% does not exists) else (
 		echo prepare to kill %image_name%
 		echo start kill %pid% ...
-		rem ¸ù¾İ½ø³ÌID£¬kill½ø³Ì
+		rem æ ¹æ®è¿›ç¨‹IDï¼Œkillè¿›ç¨‹
 		taskkill /f /pid %pid%
 	)
 goto:eof
